--- a/index.html
+++ b/index.html
@@ -1,35 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DecryptLabsX</title>
-    
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],
-m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script",
-"https://chimpstatic.com/mcjs-connected/js/users/37905fa6bdba770dd8523e327/e77a6f1cc51010c8997d42c30.js");</script>
+    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DecryptLabsx - Crypto Investigations & Recovery</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/37905fa6bdba770dd8523e327/9c7accfc48d838de335f14c6c.js");</script>
 </head>
 <body>
-    <header>
-        <h1>DecryptLabsX</h1>
-        <div class="tagline">Decoding Deception in Digital Currency</div>
-    </header>
-    <section>
-        <p>The blockchain may be transparent, but tracing activity and recovering assets isn’t always simple.</p>
-        <p>At <strong>DecryptLabsX</strong>, we support individuals, businesses, and legal teams with in-depth blockchain investigations—from asset tracing and recovery support to compliance analysis and forensic reporting.</p>
-        <p><strong>What we offer:</strong></p>
-        <ul>
-            <li>🔎 Digital asset tracing & recovery guidance</li>
-            <li>💼 Transaction monitoring & wallet analysis</li>
-            <li>📊 Blockchain compliance reporting</li>
-            <li>🛠️ Custom-built tools for investigations</li>
-        </ul>
-        <p>Looking for expert support? Let’s explore how we can help.</p>
-        <p><strong>Email:</strong> info@decryptlabsx.com<br>
-        <strong>Website:</strong> decryptlabsx.com<br>
-        <strong>Telegram:</strong> <a href="https://t.me/DecryptLabsx">https://t.me/DecryptLabsx</a></p>
-    </section>
+  <header>
+    <h1>DecryptLabsx</h1>
+    <nav>
+      <a href="#services">Services</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-box">
+      <h2>Why Choose DecryptLabsx?</h2>
+      <p>
+        At DecryptLabsx, we don’t just follow the blockchain—we decode it. Whether you’re tracing complex transactions, securing your digital assets, or preparing for regulatory audits, our elite crypto investigators are equipped with precision tools and expertise that set us apart. Trusted by financial institutions, law enforcement, and tech companies worldwide.
+      </p>
+    </div>
+  </section>
+
+  <section class="why-different">
+    <h2>What Makes Us Different?</h2>
+    <div class="reason">
+      <div class="reason-box">
+        <h3>Advanced Tools</h3>
+        <p>We use cutting-edge blockchain analytics and forensic platforms to track even the most elusive transactions.</p>
+      </div>
+      <div class="reason-box">
+        <h3>Expert Team</h3>
+        <p>Our investigators have backgrounds in cybersecurity, law enforcement, and financial forensics.</p>
+      </div>
+      <div class="reason-box">
+        <h3>Client-Centric</h3>
+        <p>We provide tailored services and work confidentially to ensure your needs are fully met.</p>
+      </div>
+      <div class="reason-box">
+        <h3>Proven Results</h3>
+        <p>From asset recovery to due diligence, our proven track record speaks for itself.</p>
+      </div>
+      <div class="reason-box">
+        <h3>Global Reach</h3>
+        <p>We handle investigations and support clients around the globe, with a deep understanding of international crypto crime trends.</p>
+      </div>
+      <div class="reason-box">
+        <h3>Regulatory Expertise</h3>
+        <p>Our team stays ahead of compliance regulations to help businesses remain audit-ready and legally secure.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="services" id="services">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service-box">
+        <h3>Crypto Investigations</h3>
+        <p>Deep-dive analysis to trace and analyze suspicious or fraudulent blockchain transactions.</p>
+      </div>
+      <div class="service-box">
+        <h3>Asset Recovery</h3>
+        <p>Specialized support in recovering stolen or lost crypto assets through forensic blockchain tracing.</p>
+      </div>
+      <div class="service-box">
+        <h3>Regulatory Compliance</h3>
+        <p>Ensure your business meets the latest crypto compliance standards and global regulations.</p>
+      </div>
+      <div class="service-box">
+        <h3>Security Audits</h3>
+        <p>Thorough assessments of smart contracts, exchanges, and platforms to identify vulnerabilities.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <h3>Contact Us</h3>
+    <p>Email: <a href="mailto:info@decryptLabsx.com">info@decryptLabsx.com</a></p>
+    <p>Telegram: <a href="https://t.me/DecryptLabsx" target="_blank">@DecryptLabsx</a></p>
+    <p>&copy; 2025 DecryptLabsx. All rights reserved.</p>
+  </footer>
 </body>
 </html>
